[gd_scene load_steps=9 format=3 uid="uid://ctsi8qbp0iddg"]

[ext_resource type="Texture2D" uid="uid://c42kx7mqrc06s" path="res://Sprites/alien1.png" id="1_07v60"]
[ext_resource type="Script" path="res://Cenas/alien.gd" id="1_lbk08"]
[ext_resource type="AudioStream" uid="uid://bl2wmpn450xtd" path="res://Sprites/sfx/explosion.wav" id="3_isb3l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xd8gh"]
size = Vector2(11, 8)

[sub_resource type="Animation" id="Animation_32j8c"]
resource_name = "AlienMov"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_a5qfu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ndegl"]
resource_name = "destroy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"elimination"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dipd"]
_data = {
"AlienMov": SubResource("Animation_32j8c"),
"RESET": SubResource("Animation_a5qfu"),
"destroy": SubResource("Animation_ndegl")
}

[node name="Alien" type="CharacterBody2D" groups=["aliens"]]
script = ExtResource("1_lbk08")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_07v60")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xd8gh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7dipd")
}
autoplay = "AlienMov"

[node name="TimerMov" type="Timer" parent="."]
wait_time = 0.5

[node name="spawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 14)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_isb3l")

[connection signal="timeout" from="TimerMov" to="." method="_on_timer_mov_timeout"]
